# Tp-Bas_niveau

manipGPS_RxPollUsart3_Nucleo/: main.c  stm32f10x_it.c
manipOOP_Nucleo_1_OOLayer/: PinAsInput.h  main.cpp  stm32_wrapper_gpio.c  stm32_wrapper_gpio.h
manipOOP_Nucleo_2_OOLayer/: PinAsOutput.h  main.cpp  stm32_wrapper_gpio.c  stm32_wrapper_gpio.h
manip_0_Discovery/: main.c
manip_0_Nucleo/: main.c
manip_1-1_Discovery/: main.c
manip_1-1_Nucleo/: main.c
manip_1-2_Discovery_hAL/: gpio.c  gpio.h  main.c  stm32map.h
manip_1-2_Nucleo-hAL/: gpio.c  main.c
manip_1-3_Discovery/: main.c
manip_1-3_Nucleo/: main.c
manip_1-4_Discovery-toggle/: main.c
manip_1-4_Nucleo-Toggle/: main.c
manip_2-1_Discovery/: main.c  stm32f10x_it.c
manip_2-1_Nucleo/: main.c  stm32f10x_it.c
manip_2-2_Discovery/: main.c  stm32f10x_it.c
manip_2-2_Nucleo/: main.c  stm32f10x_it.c
manip_2-3_Discovery/: main.c  stm32f10x_it.c
manip_2-3_Nucleo/: main.c  stm32f10x_it.c
manip_2-4_Discovery/: main.c  stm32f10x_it.c
manip_2-4_Nucleo/: main.c
mini projet/: CMakeLists.txt  Serial.h  Serial_Mode_Name.h  main.cpp  stm32_wrapper_Serial.c  stm32_wrapper_Serial.h  stm32f10x_conf.h  stm32map.h
mini projet/ARM_MDK/: manip.uvguix.Dell  manip.uvguix.oussa  manip.uvoptx  manip.uvprojx
mini projet/ARM_MDK/Listings/: startup_stm32f10x_md.lst
mini projet/ARM_MDK/Objects/: main.d  manip.build_log.htm  manip.lnp  manip_Target 1.dep  misc.crf  stm32_wrapper_serial.d  stm32f10x_dma.crf  stm32f10x_dma.d  stm32f10x_rcc.crf  stm32f10x_usart.crf  stm32f10x_usart.d  system_stm32f10x.crf
(+302 files in other folders)
